--- a/composer.json
+++ b/composer.json
@@ -52,8 +52,8 @@
         "phpunit": "@php ./vendor/bin/phpunit --no-coverage --colors=always",
         "phpunit-cover": "@php ./vendor/bin/phpunit",
         "phpstan": "@php ./vendor/bin/phpstan analyze -c ./phpstan.neon.dist --no-progress --ansi",
-        "cs-check": "@php ./vendor/bin/spiral-cs check ./bin ./config ./fixes ./src ./tests --ansi",
-        "cs-fix": "@php ./vendor/bin/spiral-cs fix --ansi",
+        "cs-check": "@php ./vendor/bin/spiral-cs check ./bin ./src ./tests --ansi",
+        "cs-fix": "@php ./vendor/bin/spiral-cs fix ./bin ./src ./tests --ansi",
         "test": [
             "@phpstan",
             "@phpunit"
