GitHub workflow rules updated

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,13 @@ on:
       - master
     tags-ignore:
       - '**'
+    paths-ignore:
+      - '**.md'
   pull_request:
+    branches:
+      - master
+    paths-ignore:
+      - '**.md'
   schedule:
     - cron: '0 0 * * 0' # once in a week, docs: <https://git.io/JvxXE#onschedule>
 
