--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
     "require": {
         "php": "^7.2",
         "ext-mbstring": "*",
-        "illuminate/contracts": "^5.5 || ~6.0 || ~7.0",
-        "illuminate/support": "^5.5 || ~6.0 || ~7.0",
-        "illuminate/http": "^5.5 || ~6.0 || ~7.0",
-        "illuminate/routing": "^5.5 || ~6.0 || ~7.0",
-        "spiral/roadrunner": "~1.7",
+        "illuminate/contracts": "~6.0 || ~7.0 || ~8.0",
+        "illuminate/support": "~6.0 || ~7.0 || ~8.0",
+        "illuminate/http": "~6.0 || ~7.0 || ~8.0",
+        "illuminate/routing": "~6.0 || ~7.0 || ~8.0",
+        "spiral/roadrunner": "~1.8",
         "symfony/psr-http-message-bridge": "^1.2 || ^2.0",
         "laminas/laminas-diactoros": "^2"
     },
@@ -29,10 +29,10 @@
         "ext-pdo": "*",
         "ext-pdo_sqlite": "*",
         "ext-sqlite3": "*",
-        "laravel/laravel": "^5.5 || ~6.0 || ~7.0",
-        "mockery/mockery": "^1.3",
+        "laravel/laravel": "~6.0 || ~7.0 || ~8.0",
+        "mockery/mockery": "^1.3.1",
         "phpstan/phpstan": "~0.12",
-        "phpunit/phpunit": "^6.4 || ~7.5",
+        "phpunit/phpunit": "^8.0 || ^9.3",
         "spiral/code-style": "^1.0"
     },
     "autoload": {
