--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.3 || ^8.0",
         "ext-mbstring": "*",
         "illuminate/contracts": "~6.0 || ~7.0 || ~8.0",
         "illuminate/support": "~6.0 || ~7.0 || ~8.0",
@@ -30,10 +30,9 @@
         "ext-pdo_sqlite": "*",
         "ext-sqlite3": "*",
         "laravel/laravel": "~6.0 || ~7.0 || ~8.0",
-        "mockery/mockery": "^1.3.1",
-        "phpstan/phpstan": "~0.12",
-        "phpunit/phpunit": "^8.0 || ^9.3",
-        "spiral/code-style": "^1.0"
+        "mockery/mockery": "^1.3.2",
+        "phpstan/phpstan": "~0.12.34",
+        "phpunit/phpunit": "^8.0 || ^9.3"
     },
     "autoload": {
         "psr-4": {
@@ -52,8 +51,6 @@
         "phpunit": "@php ./vendor/bin/phpunit --no-coverage --colors=always",
         "phpunit-cover": "@php ./vendor/bin/phpunit",
         "phpstan": "@php ./vendor/bin/phpstan analyze -c ./phpstan.neon.dist --no-progress --ansi",
-        "cs-check": "@php ./vendor/bin/spiral-cs check ./bin ./src ./tests --ansi",
-        "cs-fix": "@php ./vendor/bin/spiral-cs fix ./bin ./src ./tests --ansi",
         "test": [
             "@phpstan",
             "@phpunit"
