--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,12 @@
         "illuminate/support": "~6.0 || ~7.0 || ~8.0",
         "illuminate/http": "~6.0 || ~7.0 || ~8.0",
         "illuminate/routing": "~6.0 || ~7.0 || ~8.0",
-        "spiral/roadrunner": "~1.8",
+        "spiral/roadrunner-worker": "^2.0",
+        "spiral/roadrunner-http": "^2.0",
         "symfony/psr-http-message-bridge": "^1.2 || ^2.0",
-        "laminas/laminas-diactoros": "^2"
+        "laminas/laminas-diactoros": "^2",
+        "symfony/console": "^4.3.4 || ^5.0",
+        "composer-runtime-api": "^2.0"
     },
     "require-dev": {
         "ext-pdo": "*",
@@ -31,7 +34,7 @@
         "ext-sqlite3": "*",
         "laravel/laravel": "~6.0 || ~7.0 || ~8.0",
         "mockery/mockery": "^1.3.2",
-        "phpstan/phpstan": "~0.12.34",
+        "phpstan/phpstan": "~0.12.80",
         "phpunit/phpunit": "^8.0 || ^9.3"
     },
     "autoload": {
