--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,9 +23,9 @@ jobs: # Docs: <https://help.github.com/en/articles/workflow-syntax-for-github-ac
       fail-fast: false
       matrix:
         setup: ['basic', 'lowest']
-        php: ['7.3', '7.4', '8.0']
+        php: ['7.4', '8.0']
         include:
-          - php: '7.3'
+          - php: '7.4'
             setup: 'basic'
             coverage: 'true'
           - php: '8.0'
