--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "laravel/laravel": "~6.0 || ~7.0 || ~8.0",
         "mockery/mockery": "^1.3.2",
         "phpstan/phpstan": "~0.12.80",
-        "phpunit/phpunit": "^8.0 || ^9.3"
+        "phpunit/phpunit": "^8.0 || ^9.3",
+        "guzzlehttp/guzzle": "^6.3 || ~7.0"
     },
     "autoload": {
         "psr-4": {
