--- a/composer.json
+++ b/composer.json
@@ -15,24 +15,24 @@
         }
     ],
     "require": {
-        "php": "^7.3 || ^8.0",
-        "ext-mbstring": "*",
+        "php": "^7.4 || ^8.0",
         "illuminate/contracts": "~6.0 || ~7.0 || ~8.0",
         "illuminate/support": "~6.0 || ~7.0 || ~8.0",
         "illuminate/http": "~6.0 || ~7.0 || ~8.0",
         "illuminate/routing": "~6.0 || ~7.0 || ~8.0",
-        "spiral/roadrunner": "~1.8",
+        "spiral/roadrunner-worker": "^2.0",
+        "spiral/roadrunner-http": "^2.0",
         "symfony/psr-http-message-bridge": "^1.2 || ^2.0",
-        "laminas/laminas-diactoros": "^2"
+        "laminas/laminas-diactoros": "^2",
+        "symfony/console": "^4.3.4 || ^5.0",
+        "composer-runtime-api": "^2.0"
     },
     "require-dev": {
-        "ext-pdo": "*",
-        "ext-pdo_sqlite": "*",
-        "ext-sqlite3": "*",
         "laravel/laravel": "~6.0 || ~7.0 || ~8.0",
         "mockery/mockery": "^1.3.2",
-        "phpstan/phpstan": "~0.12.34",
-        "phpunit/phpunit": "^8.0 || ^9.3"
+        "phpstan/phpstan": "~0.12.80",
+        "phpunit/phpunit": "^8.0 || ^9.3",
+        "guzzlehttp/guzzle": "^6.3 || ~7.0"
     },
     "autoload": {
         "psr-4": {
@@ -66,11 +66,6 @@
                 "Spiral\\RoadRunnerLaravel\\ServiceProvider"
             ]
         }
-    },
-    "suggest": {
-        "illuminate/redis": "Required for dropping redis connections",
-        "illuminate/database": "Required for dropping database connections",
-        "avto-dev/stacked-dumper-laravel": "Stacked variables dumper for Laravel-based application"
     },
     "support": {
         "issues": "https://github.com/spiral/roadrunner-laravel/issues",
