--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -3,11 +3,4 @@ parameters:
   paths:
     - src
     - bin/rr-worker
-  reportUnmatchedIgnoredErrors: false
-  ignoreErrors:
-    - message: '#Access to an undefined property.*::\$app#'
-      paths: [src/Listeners/RebindHttpKernelListener.php]
-    - message: '#Access to an undefined property.*::\$container#'
-      paths: [src/Listeners/RebindRouterListener.php]
-    - message: '#Access to an undefined property.*::\$(container|shared)#'
-      paths: [src/Listeners/RebindViewListener.php]
+  reportUnmatchedIgnoredErrors: true
