--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
     ],
     "scripts": {
         "phpunit": "@php ./vendor/bin/phpunit --no-coverage --colors=always",
-        "phpunit-cover": "@php ./vendor/bin/phpunit",
+        "phpunit-cover": "@php ./vendor/bin/phpunit --colors=always",
         "phpstan": "@php ./vendor/bin/phpstan analyze -c ./phpstan.neon.dist --no-progress --ansi",
         "test": [
             "@phpstan",
