--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ on:
 
 jobs: # Docs: <https://help.github.com/en/articles/workflow-syntax-for-github-actions>
   tests:
-    name: PHP ${{ matrix.php }}, RR ${{ matrix.rr }} (${{ matrix.setup }} setup, coverage ${{ matrix.coverage }})
+    name: PHP ${{ matrix.php }}, RR ${{ matrix.rr }} (${{ matrix.setup }} setup)
     runs-on: ubuntu-20.04
     timeout-minutes: 10
     strategy:
@@ -24,14 +24,16 @@ jobs: # Docs: <https://help.github.com/en/articles/workflow-syntax-for-github-ac
       matrix:
         setup: ['basic', 'lowest']
         php: ['7.4', '8.0']
-        rr: ['2.0.0', '2.2.1'] # Releases: <https://github.com/spiral/roadrunner-binary/releases>
+        rr: ['2.2.1'] # Releases: <https://github.com/spiral/roadrunner-binary/releases>
         coverage: ['true']
         include:
           - php: '7.4'
             setup: 'basic'
+            rr: '2.0.0'
             coverage: 'false'
           - php: '8.0'
             setup: 'basic'
+            rr: '2.0.0'
             coverage: 'false'
     steps:
       - name: Check out code
