--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,7 +32,7 @@ jobs: # Docs: <https://help.github.com/en/articles/workflow-syntax-for-github-ac
             rr: '2.0.0'
             coverage: 'false'
           - php: '8.0'
-            setup: 'basic'
+            setup: 'lowest'
             rr: '2.0.0'
             coverage: 'false'
     steps:
