--- a/composer.json
+++ b/composer.json
@@ -64,8 +64,8 @@
         "bin/rr-worker"
     ],
     "scripts": {
-        "phpunit": "@php ./vendor/bin/phpunit --no-coverage --colors=always",
-        "phpunit-cover": "@php ./vendor/bin/phpunit --colors=always",
+        "phpunit": "@php ./vendor/bin/phpunit --no-coverage",
+        "phpunit-cover": "@php ./vendor/bin/phpunit",
         "phpstan": "@php ./vendor/bin/phpstan analyze -c ./phpstan.neon.dist --no-progress --ansi",
         "test": [
             "@phpstan",
