--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ on:
     paths-ignore:
       - '**.md'
   schedule:
-    - cron: '0 0 * * 0' # once in a week, docs: <https://git.io/JvxXE#onschedule>
+    - cron: '0 0 * * 1' # once in a week, docs: <https://git.io/JvxXE#onschedule>
 
 jobs: # Docs: <https://help.github.com/en/articles/workflow-syntax-for-github-actions>
   tests:
@@ -24,14 +24,17 @@ jobs: # Docs: <https://help.github.com/en/articles/workflow-syntax-for-github-ac
       matrix:
         setup: ['basic', 'lowest']
         php: ['7.4', '8.0']
-        rr: ['2.0.1']
+        rr: ['2.2.1'] # Releases: <https://github.com/spiral/roadrunner-binary/releases>
+        coverage: ['true']
         include:
           - php: '7.4'
             setup: 'basic'
-            coverage: 'true'
+            rr: '2.0.0'
+            coverage: 'false'
           - php: '8.0'
-            setup: 'basic'
-            coverage: 'true'
+            setup: 'lowest'
+            rr: '2.0.0'
+            coverage: 'false'
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -43,7 +46,7 @@ jobs: # Docs: <https://help.github.com/en/articles/workflow-syntax-for-github-ac
         uses: shivammathur/setup-php@v2 # Action page: <https://github.com/shivammathur/setup-php>
         with:
           php-version: ${{ matrix.php }}
-          extensions: mbstring, pdo, pdo_sqlite, sqlite3, xdebug # definition is required for php 7.4
+          extensions: xdebug
 
       - name: Get Composer Cache Directory # Docs: <https://github.com/actions/cache/blob/master/examples.md#php---composer>
         id: composer-cache
@@ -95,7 +98,6 @@ jobs: # Docs: <https://help.github.com/en/articles/workflow-syntax-for-github-ac
         uses: shivammathur/setup-php@v2
         with:
           php-version: 7.4
-          extensions: mbstring
 
       - name: Get Composer Cache Directory
         id: composer-cache
