--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,10 @@
     "autoload": {
         "psr-4": {
             "Spiral\\RoadRunnerLaravel\\": "src/"
-        }
+        },
+        "files": [
+            "helpers/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
@@ -80,10 +83,7 @@
         "laravel": {
             "providers": [
                 "Spiral\\RoadRunnerLaravel\\ServiceProvider"
-            ],
-            "aliases": {
-                "RR": "Spiral\\RoadRunnerLaravel\\Facades\\RR"
-            }
+            ]
         }
     },
     "support": {
