--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "laravel/laravel": "~6.0 || ~7.0 || ~8.0",
         "laravel/scout": "~8.0 || ~9.0",
         "laravel/socialite": "^5.0",
+        "laravel/telescope": "^4.5",
         "mockery/mockery": "^1.3.2",
         "phpstan/phpstan": "~0.12.80",
         "phpunit/phpunit": "^8.0 || ^9.3"
