--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
         "laravel/telescope": "^4.5",
         "mockery/mockery": "^1.3.2",
         "phpstan/phpstan": "~0.12.80",
-        "phpunit/phpunit": "^8.0 || ^9.3"
+        "phpunit/phpunit": "^8.0 || ^9.3",
+        "livewire/livewire": "^2.7"
     },
     "autoload": {
         "psr-4": {
