--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs: # Docs: <https://help.github.com/en/articles/workflow-syntax-for-github-ac
       fail-fast: false
       matrix:
         setup: ['basic', 'lowest']
-        php: ['7.4', '8.1']
+        php: ['7.4', '8.0']
         rr: ['2.6.6'] # Releases: <https://github.com/spiral/roadrunner-binary/releases>
         coverage: ['true']
         include:
@@ -34,6 +34,10 @@ jobs: # Docs: <https://help.github.com/en/articles/workflow-syntax-for-github-ac
           - php: '8.0'
             setup: 'lowest'
             rr: '2.0.0'
+            coverage: 'false'
+          - php: '8.1'
+            setup: 'basic'
+            rr: '2.6.6'
             coverage: 'false'
     steps:
       - name: Check out code
