--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "laravel/socialite": "^5.0",
         "laravel/telescope": "^4.5",
         "livewire/livewire": "^2.7",
-        "mockery/mockery": "^1.3.1",
+        "mockery/mockery": "~1.3.3 || ^1.4.2",
         "phpstan/phpstan": "~1.3",
         "phpunit/phpunit": "^9.3.3"
     },
