--- a/composer.json
+++ b/composer.json
@@ -17,41 +17,24 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "composer-runtime-api": "^2.0",
-        "illuminate/auth": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/broadcasting": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/cache": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/contracts": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/cookie": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/database": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/http": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/mail": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/notifications": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/pipeline": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/queue": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/routing": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/session": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/support": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/translation": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/validation": "~6.0 || ~7.0 || ~8.0",
-        "illuminate/view": "~6.0 || ~7.0 || ~8.0",
-        "nyholm/psr7": "^1.2",
-        "spiral/roadrunner-http": "^2.0",
-        "spiral/roadrunner-worker": "^2.0.3",
-        "symfony/console": "^4.3.4 || ^5.0",
-        "symfony/psr-http-message-bridge": "^1.2 || ^2.0"
+        "laravel/framework": "~8.0 || ~9.0",
+        "nyholm/psr7": "^1.5",
+        "spiral/roadrunner-http": "^2.0.4",
+        "spiral/roadrunner-worker": "^2.1.5",
+        "symfony/psr-http-message-bridge": "^2.0"
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^6.3 || ~7.0",
-        "inertiajs/inertia-laravel": "^0.4.2",
+        "inertiajs/inertia-laravel": "^0.4.2 || ^0.5",
         "tightenco/ziggy": "^1.4.0",
-        "laravel/laravel": "~6.0 || ~7.0 || ~8.0",
-        "laravel/scout": "~8.0 || ~9.0",
+        "laravel/laravel": "~8.0 || ~9.0",
+        "laravel/scout": "~9.0",
         "laravel/socialite": "^5.0",
         "laravel/telescope": "^4.5",
-        "mockery/mockery": "^1.3.2",
-        "phpstan/phpstan": "~1.2",
-        "phpunit/phpunit": "^8.0 || ^9.3",
-        "livewire/livewire": "^2.7"
+        "livewire/livewire": "^2.7",
+        "mockery/mockery": "~1.3.3 || ^1.4.2",
+        "phpstan/phpstan": "~1.4",
+        "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
         "psr-4": {
