--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "laravel/socialite": "^5.0",
         "laravel/telescope": "^4.5",
         "livewire/livewire": "^2.7",
+        "spatie/laravel-ignition": "^1.0",
         "mockery/mockery": "~1.3.3 || ^1.4.2",
         "phpstan/phpstan": "~1.4",
         "phpunit/phpunit": "^9.3.3"
