laravel-ignition integration and CLI mode detection (#88)

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -6,7 +6,9 @@ parameters:
     - fixes
     - helpers
     - src
-  reportUnmatchedIgnoredErrors: true
+  reportUnmatchedIgnoredErrors: false
   ignoreErrors:
     - message: '#Call to protected method bootstrappers\(\) of class.+Kernel#'
       paths: [src/Application/Factory.php]
+    - message: '#Class Spatie\\.+Ignition.* not found#'
+      paths: [src/Listeners/ResetLaravelIgnitionListener.php]
