--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,8 +19,8 @@ jobs: # Docs: <https://help.github.com/en/articles/workflow-syntax-for-github-ac
       fail-fast: false
       matrix:
         setup: ['basic', 'lowest']
-        php: ['7.4', '8.0']
-        rr: ['2.7.6'] # Releases: <https://github.com/roadrunner-server/roadrunner/releases>
+        php: ['8.0', '8.1', '8.2']
+        rr: ['2.12.1'] # Releases: <https://github.com/roadrunner-server/roadrunner/releases>
         coverage: ['true']
         include:
           - php: '7.4'
@@ -33,7 +33,7 @@ jobs: # Docs: <https://help.github.com/en/articles/workflow-syntax-for-github-ac
             coverage: 'false'
           - php: '8.1'
             setup: 'basic'
-            rr: '2.7.6'
+            rr: '2.12.1'
             coverage: 'false'
     steps:
       - uses: actions/checkout@v3
